--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^8.5.2",
+    "bootstrap": "^4.4.1",
+    "ng-bootstrap": "^1.6.3",
+    "ngrx-store-logger": "^0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -43,5 +49,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css"
+  ]
 }
